<resources>
    <string name="app_name">Popular Movies</string>
    <string name="content_authority" translatable="false">com.example.android.popularmovies</string>
    <string name="movie_details">Movie Details</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="error_message_common">
        An error has occurred. Please try again by clicking the refresh button.
    </string>
    <string name="error_message_internet">
        It seems that the internet connection has stopped. Please check your device connection and try again by clicking the refresh button.
    </string>
    <string name="error_message_api_key">
        The API Key is empty. Please enter your API Key in the "NetworkUtils.java" file and re-run the code.
    </string>
    <string name="error_message_no_movie_selected">
        Select a movie on the left panel to see its description, trailers and reviews here.
    </string>
    <string name="no_favorites_message">
        You have no favorite movies yet. Browse through the movies and click on the heart button to save it in your Favorites list.
    </string>

    <string name="movie_original_title">Original Title: %1$s</string>
    <string name="movie_release_date">Release Date: %1$s</string>
    <string name="movie_description" translatable="false">Synopsis: %1$s</string>
    <string name="movie_ratings">User Score: %1$s/10</string>
    <string name="movie_videos">Videos:</string>
    <string name="movie_reviews">Reviews:</string>
    <string name="movie_reviews_read_more">Read more</string>
    <string name="movie_reviews_read_less">Read less</string>

    <string name="movie_video_no_content_message">There are no videos available</string>
    <string name="movie_review_no_content_message">There are no reviews yet</string>

    <string name="toast_add_favorite">Movie added to favorites</string>
    <string name="toast_remove_favorite">Movie removed from favorites</string>

    <string name="popular_button">Most Popular</string>
    <string name="ratings_button">Top Rated</string>
    <string name="favorites_button">Favorites</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="app_about_intro">This app was made by</string>
    <string name="app_author" translatable="false">Thibaut Massard</string>
    <string name="app_version" translatable="false">Version 1.0.0</string>
    <string name="app_author_website_label">Website:</string>
    <string name="app_author_website" translatable="false">http://thibautmassard.com</string>
    <string name="app_author_github_label" translatable="false">Github:</string>
    <string name="app_author_github" translatable="false">https://github.com/thib146</string>
</resources>
