<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/main_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- BEGIN TOOLBAR -->
    <ImageView
        android:id="@+id/about_toolbar"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageView
        android:id="@+id/iv_back_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back_black_24dp"
        app:layout_constraintTop_toTopOf="@+id/about_toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/about_toolbar"
        app:layout_constraintLeft_toLeftOf="@+id/about_toolbar"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textColor="@color/colorMainToolbarText"
        android:textSize="20sp"
        android:id="@+id/about_toolbar_title"
        app:layout_constraintTop_toTopOf="@+id/about_toolbar"
        app:layout_constraintBottom_toBottomOf="@+id/about_toolbar"
        app:layout_constraintLeft_toRightOf="@+id/iv_back_about"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>
    <!-- END TOOLBAR -->

    <!-- BEGIN MAIN CONTENT -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/about_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.constraint.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_about_intro"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_about_intro"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="125dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginRight="16dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_author"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_author"
                app:layout_constraintTop_toBottomOf="@+id/app_about_intro"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_version"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/app_author" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_author_website_label"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_author_website_label"
                app:layout_constraintTop_toBottomOf="@+id/app_version"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_author_website"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_author_website"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/app_author_website_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_author_github_label"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_gihub_label"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/app_author_website"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_author_github"
                android:textColor="@color/textItemsSettings"
                android:textSize="16sp"
                android:id="@+id/app_author_github"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@+id/app_gihub_label"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>
    <!-- END MAIN CONTENT -->

</android.support.constraint.ConstraintLayout>